--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REDIS_URL=redis://localhost:6379/0
-ACTION_CABLE_SERVER=ws://localhost:3000/cable
+REDIS_URL=redis://redis:6379/0 #redis://localhost:6379/0
+ACTION_CABLE_SERVER=ws://localhost:3000/cable #ws://localhost:3000/cable
