--- a/k8s/app.yml
+++ b/k8s/app.yml
@@ -27,7 +27,9 @@ spec:
             - name: REDIS_URL
               value: redis://localhost:6379/0
             - name: ACTION_CABLE_SERVER
-              value: ws://localhost:8181/cable
+              value: ws://ws-test.smarttest.8s.de/cable
+            - name: ALLOWED_HOST
+              value: ws-test.smarttest.8s.de
         - name: redis
           image: redis:3.2-alpine
           imagePullPolicy: Always
